[package]
name = "proxi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = "0.3.30"
rsa = "0.7"
base64 = "0.22.1"
num-bigint = "0.4.6"
hex = "0.4.3"
rand = "0.8.5"
num-traits = "0.2.19"
encoding_rs = "0.8.34"
